crates/bevy_flair_style/src/snapshots/bevy_flair_style__tests__append_grand_children_after_initial_spawn.snap
---
source: crates/bevy_flair_style/src/lib.rs
expression: world_serializer
---
World(
  resources: {},
  entities: {
    4294967235: Entity(
      components: {
        "bevy_ecs::hierarchy::ChildOf": ChildOf(4294967240),
        "bevy_flair_style::components::StyleData": StyleData(
          effective_style_sheet_asset_id: Uuid(
            uuid: "51928a2e-91ad-413c-a910-d02c6a716cc8",
          ),
          is_root: false,
          id: None,
          classes: [],
          attributes: {},
          type_name: None,
          pseudo_state: NodePseudoState(
            pressed: false,
            hovered: false,
            focused: false,
            focused_and_visible: false,
            disabled: false,
            checked: false,
          ),
          is_pseudo_element: None,
        ),
        "bevy_flair_style::components::Styled": Inherited,
        "bevy_flair_style::tests::GrandChild": GrandChild(),
      },
    ),
    4294967236: Entity(
      components: {
        "bevy_ecs::hierarchy::ChildOf": ChildOf(4294967240),
        "bevy_flair_style::components::StyleData": StyleData(
          effective_style_sheet_asset_id: Uuid(
            uuid: "51928a2e-91ad-413c-a910-d02c6a716cc8",
          ),
          is_root: false,
          id: None,
          classes: [],
          attributes: {},
          type_name: None,
          pseudo_state: NodePseudoState(
            pressed: false,
            hovered: false,
            focused: false,
            focused_and_visible: false,
            disabled: false,
            checked: false,
          ),
          is_pseudo_element: None,
        ),
        "bevy_flair_style::components::Styled": Inherited,
        "bevy_flair_style::tests::GrandChild": GrandChild(),
      },
    ),
    4294967237: Entity(
      components: {
        "bevy_ecs::hierarchy::ChildOf": ChildOf(4294967241),
        "bevy_flair_style::components::StyleData": StyleData(
          effective_style_sheet_asset_id: Uuid(
            uuid: "fe981062-17ce-46e4-999a-5a61ea8fe722",
          ),
          is_root: false,
          id: None,
          classes: [],
          attributes: {},
          type_name: None,
          pseudo_state: NodePseudoState(
            pressed: false,
            hovered: false,
            focused: false,
            focused_and_visible: false,
            disabled: false,
            checked: false,
          ),
          is_pseudo_element: None,
        ),
        "bevy_flair_style::components::Styled": Inherited,
        "bevy_flair_style::tests::GrandChild": GrandChild(),
      },
    ),
    4294967238: Entity(
      components: {
        "bevy_ecs::hierarchy::ChildOf": ChildOf(4294967241),
        "bevy_flair_style::components::StyleData": StyleData(
          effective_style_sheet_asset_id: Uuid(
            uuid: "fe981062-17ce-46e4-999a-5a61ea8fe722",
          ),
          is_root: false,
          id: None,
          classes: [],
          attributes: {},
          type_name: None,
          pseudo_state: NodePseudoState(
            pressed: false,
            hovered: false,
            focused: false,
            focused_and_visible: false,
            disabled: false,
            checked: false,
          ),
          is_pseudo_element: None,
        ),
        "bevy_flair_style::components::Styled": Inherited,
        "bevy_flair_style::tests::GrandChild": GrandChild(),
      },
    ),
    4294967240: Entity(
      components: {
        "bevy_ecs::hierarchy::ChildOf": ChildOf(4294967242),
        "bevy_ecs::hierarchy::Children": Children([
          4294967236,
          4294967235,
        ]),
        "bevy_flair_style::components::StyleData": StyleData(
          effective_style_sheet_asset_id: Uuid(
            uuid: "51928a2e-91ad-413c-a910-d02c6a716cc8",
          ),
          is_root: false,
          id: None,
          classes: [],
          attributes: {},
          type_name: None,
          pseudo_state: NodePseudoState(
            pressed: false,
            hovered: false,
            focused: false,
            focused_and_visible: false,
            disabled: false,
            checked: false,
          ),
          is_pseudo_element: None,
        ),
        "bevy_flair_style::components::Styled": Block,
        "bevy_flair_style::tests::Child": Child(),
      },
    ),
    4294967241: Entity(
      components: {
        "bevy_ecs::hierarchy::ChildOf": ChildOf(4294967242),
        "bevy_ecs::hierarchy::Children": Children([
          4294967238,
          4294967237,
        ]),
        "bevy_flair_style::components::StyleData": StyleData(
          effective_style_sheet_asset_id: Uuid(
            uuid: "fe981062-17ce-46e4-999a-5a61ea8fe722",
          ),
          is_root: false,
          id: None,
          classes: [],
          attributes: {},
          type_name: None,
          pseudo_state: NodePseudoState(
            pressed: false,
            hovered: false,
            focused: false,
            focused_and_visible: false,
            disabled: false,
            checked: false,
          ),
          is_pseudo_element: None,
        ),
        "bevy_flair_style::components::Styled": Inherited,
        "bevy_flair_style::tests::Child": Child(),
      },
    ),
    4294967242: Entity(
      components: {
        "bevy_ecs::hierarchy::Children": Children([
          4294967241,
          4294967240,
        ]),
        "bevy_ecs::name::Name": "Root",
        "bevy_flair_style::components::StyleData": StyleData(
          effective_style_sheet_asset_id: Uuid(
            uuid: "fe981062-17ce-46e4-999a-5a61ea8fe722",
          ),
          is_root: true,
          id: Some("Root"),
          classes: [],
          attributes: {},
          type_name: None,
          pseudo_state: NodePseudoState(
            pressed: false,
            hovered: false,
            focused: false,
            focused_and_visible: false,
            disabled: false,
            checked: false,
          ),
          is_pseudo_element: None,
        ),
        "bevy_flair_style::components::Styled": StyleSheet(Uuid("fe981062-17ce-46e4-999a-5a61ea8fe722")),
      },
    ),
  },
)
