crates/bevy_flair_style/src/snapshots/bevy_flair_style__tests__custom_button.snap
---
source: crates/bevy_flair_style/src/lib.rs
expression: world_serializer
---
World(
  resources: {},
  entities: {
    4294967241: Entity(
      components: {
        "bevy_flair_style::components::StyleData": StyleData(
          effective_style_sheet_asset_id: Uuid(
            uuid: "fe981062-17ce-46e4-999a-5a61ea8fe722",
          ),
          is_root: true,
          id: None,
          classes: [],
          attributes: {},
          type_name: Some("custom-button"),
          pseudo_state: NodePseudoState(
            pressed: false,
            hovered: false,
            focused: false,
            focused_and_visible: false,
            disabled: false,
            checked: false,
          ),
          is_pseudo_element: None,
        ),
        "bevy_flair_style::components::Styled": StyleSheet(Uuid("fe981062-17ce-46e4-999a-5a61ea8fe722")),
        "bevy_flair_style::tests::CustomButton": CustomButton(),
      },
    ),
  },
)
