crates/bevy_flair_style/src/snapshots/bevy_flair_style__tests__spawn_many_children.snap
---
source: crates/bevy_flair_style/src/lib.rs
expression: world_serializer
---
World(
  resources: {},
  entities: {
    4294967238: Entity(
      components: {
        "bevy_ecs::hierarchy::ChildOf": ChildOf(4294967241),
        "bevy_flair_style::components::Styled": Inherited,
        "bevy_flair_style::tests::Child": Child(),
      },
    ),
    4294967239: Entity(
      components: {
        "bevy_ecs::hierarchy::ChildOf": ChildOf(4294967241),
        "bevy_flair_style::components::Styled": Inherited,
        "bevy_flair_style::tests::Child": Child(),
      },
    ),
    4294967240: Entity(
      components: {
        "bevy_ecs::hierarchy::ChildOf": ChildOf(4294967241),
        "bevy_flair_style::components::Styled": Inherited,
        "bevy_flair_style::tests::Child": Child(),
      },
    ),
    4294967241: Entity(
      components: {
        "bevy_ecs::hierarchy::Children": Children([
          4294967240,
          4294967239,
          4294967238,
        ]),
        "bevy_ecs::name::Name": "Root",
        "bevy_flair_style::components::Styled": StyleSheet(Uuid("fe981062-17ce-46e4-999a-5a61ea8fe722")),
      },
    ),
  },
)
